--- a/style.css
+++ b/style.css
@@ -14,6 +14,18 @@ margin-top:50px;
 	width:500px;
 	border:5 inset #6C9;
 }
-.nav {
-	display: inline;
+.nav{
+    border:1px solid #ccc;
+    border-width:1px 0;
+    list-style:none;
+    margin:0;
+    padding:0;
+    text-align:center;
+}
+.nav li{
+    display:inline;
+}
+.nav a{
+    display:inline-block;
+    padding:10px;
 }
