--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@ margin-top:50px;
 	border:5 inset #6C9;
 }
 .nav{
-    border:1px solid #ccc;
-    border-width:1px 0;
+    border:0 solid #ccc;
+    border-width:0 0;
     list-style:none;
     margin:0;
     padding:0;
